# piyush-kurur.github.io

./: .gitignore  Gemfile  LICENSE  Makefile  README.md  config.rb  index.html  site.cabal  site.hs  stack.yaml
Site/: Blog.hs  Compilers.hs  Config.hs  Publication.hs  RemoteFile.hs
Site/Pandoc/: Links.hs
contact/: index.html
contents/: index.md
contents/contact/: index.md
contents/legal/: cc-by.txt  index.md
contents/misc/: navigation.md  urls.db
contents/posts/: 2010-04-13-Markdown.md  2011-06-02-SSH-A-quick-guide.md  2011-06-03-SSHFS-Remote-directory-over-ssh.md  2012-02-20-Why-Kick-Elsevier.md  2013-05-15-Webpage-Reloaded.md  2013-05-22-Comments-on-this-blog.md  2013-08-24-Raaz-A-cryptographic-network-library.md  2013-10-18-Type-theory-series.md  2013-11-04-Lambda-calculus.md  2013-11-08-Travis-builds-for-raaz.md  2014-01-11-Typed-lambda-calculus.md  2014-08-27-Dependent-Types.md  (+9 more)
legal/: index.html
posts/: 2010-04-13-Markdown.html  2011-06-02-SSH-A-quick-guide.html  2011-06-03-SSHFS-Remote-directory-over-ssh.html  2012-02-20-Why-Kick-Elsevier.html  2013-05-15-Webpage-Reloaded.html  2013-05-22-Comments-on-this-blog.html  2013-08-24-Raaz-A-cryptographic-network-library.html  2013-10-18-Type-theory-series.html  2013-11-04-Lambda-calculus.html  2013-11-08-Travis-builds-for-raaz.html  2014-01-11-Typed-lambda-calculus.html  2014-08-27-Dependent-Types.html  2015-01-03-Homotopy-type-theory-at-IITK.html  2015-01-09-Je-suis-Charlie.html  2016-07-11-First-release-of-Raaz.html  2016-07-30-Why-another-cryptolibrary.html  2016-08-02-Handling-Secure-Memory-in-Raaz.html  2016-09-27-Haskell-2016-impressions-of-a-first-timer.html  2017-02-02-Raaz-new-release.html  2017-02-06-Adventures-in-optimising-chacha20.html  2017-04-04-Beware-of-Numeric-Types.html
research/: index.html
sass/: _download.sass  _layout.sass  _navigation.sass  _reddit.sass  _tables.sass  _typography.sass  screen.sass
scripts/: deploy.sh
software/: index.html
stylesheets/: screen.css
teaching/: index.html
(+233 files in other folders)
