name:                site
version:             0.1.0.0
synopsis:            Hakyll website for Piyush P Kurur
description:         Please see README.md
homepage:            https://github.com/indian-curry/website#readme
license:             BSD3
license-file:        LICENSE
author:              Piyush P Kurur
maintainer:          ppk@cse.iitk.ac.in
copyright:           2016, Piyush P Kurur
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  other-modules: Site.Config
               , Site.Compilers
               , Site.Publication
               , Site.Blog
               , Site.Pandoc.Links
               , Site.RemoteFile
  build-depends: base
               , hakyll
               , filepath
               , pandoc
               , containers
               , binary
               , directory
